# HEFTcomp24

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  environment.yml  pyproject.toml  requirements.txt
notebooks/: HierarchicalNetworks.ipynb
src/: __main__.py  auto_submitter.py  baseline_submitter.py  comp_utils.py  gluonts_submitter.py  lgb_submitter.py  rebase.py  utils.py
src/apis/: handler.py  national_grid.py  rebase.py
src/data/: abc.py  format.py  mv_processor.py  processor.py  uv_processor.py
src/forecast/: abc.py  baseline.py  gluonts.py  gluonts_new.py  lgbm.py  model.py  scale.py  scores.py  utils.py
src/pipeline/: abc.py  baseline.py  competition.py  gluonts.py  lgbm.py
src/trading/: abc.py  revenue.py  strategy.py  utils.py
