[tool.poetry]
name = "HEFTcomp"
version = "0.1.0"
description = "A project for `Hybrid Energy Forecasting and Trading Competition` competition"
authors = ["Aleksei Mashlakov"]

[tool.poetry.dependencies]
python = "^3.11"
pdoc3 = "^0.10.0"
notebook = "^6.4.10"
prefect = "^2.7.6"
scikit-learn = "^1.2.0"
pandas = "^1.5.2"
prefect-jupyter = "^0.2.0"
interrogate = "^1.5.0"
joblib = "^1.2.0"
dask = "*"
netCDF4 = "*"
bottleneck = "*"
xarray = "*"
statsmodels = "*"
matplotlib = "*"
requests = "*"
seaborn = "*"
polars = "*"
hvplot = "*"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pre-commit = "^2.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
	\.git
| \.hg
| \.mypy_cache
| \.tox
| \.venv
| _build
| buck-out
| build   
)/ 
'''
