[tool.poetry]
name = "HEFTcomp"
version = "0.1.0"
description = "A project for `Hybrid Energy Forecasting and Trading Competition` competition"
authors = ["Aleksei Mashlakov"]

[tool.poetry.dependencies]
python = "^3.11"
pdoc3 = "*"
notebook = "*"
prefect = "*"
scikit-learn = "*"
pandas = "*"
prefect-jupyter = "*"
interrogate = "*"
joblib = "*"
dask = "*"
netCDF4 = "*"
bottleneck = "*"
xarray = "*"
statsmodels = "*"
matplotlib = "*"
requests = "*"
seaborn = "*"
polars = "*"
hvplot = "*"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pre-commit = "^2.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
	\.git
| \.hg
| \.mypy_cache
| \.tox
| \.venv
| _build
| buck-out
| build   
)/ 
'''
